# survival-analysis-framework

./: .gitignore  .post-commit-test.md  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_QUALITY.md  GITHUB_SETUP.md  INTEGRATION_TESTING_GUIDE.md  LAPACK_ERROR_ANALYSIS.md  LAPACK_FIX_SUMMARY.md  METHODOLOGY.docx  METHODOLOGY.md  PHASE1_BENCHMARK.md  PRODUCTION_BENCHMARK_PRELIMINARY.md  PROJECT_TEMPLATE.md  REPLICATION_GUIDE.md  RUN_TYPE_IMPLEMENTATION_COMPLETE.md  RUN_TYPE_MIGRATION_GUIDE.md  SETUP_CHECKLIST.md  SUCCESS_REPORT.md  TESTING.md  TEST_REPORT.md  cox_survival_v9.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt
.claude/: README.md
.claude/agents/: README.md  code-reviewer.md  integration-tester.md  test-runner.md
.claude/archive/benchmarks/2025-10/: README.md
.claude/archive/completed-tasks/2025-10/: README.md
.claude/archive/planning/2025-10/: README.md  auto-recovery-design.md  pipeline-resilience-plan.md  resilience-implementation-status.md
.claude/archive/scripts/2025-10/: README.md  predict_gbsa.py  recover_pipeline.py  test_recovery.py
.claude/assessments/: README.md  code-review-2025-10-26.md
.claude/skills/: README.md  archive-management.md  changelog-management.md  context-management.md  integration-tests.md  logging-policy.md  parameter-management.md  test-suite.md  unit-tests.md  validate-model-outputs.md
artifacts/: README.md  model_metrics.csv  model_summary.csv
artifacts/cox_ph/: cox_ph_fold0_risk.npy  cox_ph_fold0_surv.npy  cox_ph_fold1_risk.npy  cox_ph_fold1_surv.npy  cox_ph_fold2_risk.npy  cox_ph_fold2_surv.npy  cox_ph_fold3_risk.npy  cox_ph_fold3_surv.npy  cox_ph_fold4_risk.npy  cox_ph_fold4_surv.npy
artifacts/coxnet/: coxnet_fold0_risk.npy  coxnet_fold0_surv.npy  coxnet_fold1_risk.npy  coxnet_fold1_surv.npy  coxnet_fold2_risk.npy  coxnet_fold2_surv.npy  coxnet_fold3_risk.npy  coxnet_fold3_surv.npy  coxnet_fold4_risk.npy  coxnet_fold4_surv.npy
artifacts/gbsa/: gbsa_fold0_risk.npy  gbsa_fold0_surv.npy  gbsa_fold1_risk.npy  gbsa_fold1_surv.npy  gbsa_fold2_risk.npy  gbsa_fold2_surv.npy  gbsa_fold3_risk.npy  gbsa_fold3_surv.npy  gbsa_fold4_risk.npy  gbsa_fold4_surv.npy
artifacts/rsf/: rsf_fold0_risk.npy  rsf_fold0_surv.npy  rsf_fold1_risk.npy  rsf_fold1_surv.npy  rsf_fold2_risk.npy  rsf_fold2_surv.npy  rsf_fold3_risk.npy  rsf_fold3_surv.npy  rsf_fold4_risk.npy  rsf_fold4_surv.npy
artifacts/weibull_aft/: weibull_aft_fold0_risk.npy  weibull_aft_fold0_surv.npy  weibull_aft_fold1_risk.npy  weibull_aft_fold1_surv.npy  weibull_aft_fold2_risk.npy  weibull_aft_fold2_surv.npy  weibull_aft_fold3_risk.npy  weibull_aft_fold3_surv.npy  weibull_aft_fold4_risk.npy  weibull_aft_fold4_surv.npy
data/: README.md
data/inputs/production/: README.md
data/predictions/: README.md  survival_predictions_20251023_181348.csv  survival_predictions_20251023_181701.csv  survival_predictions_20251023_183530.csv
data/sample/: README.md  survival_inputs_sample2000.csv
data/test_outputs/: README.md
mlruns/: README.md
mlruns/0/: meta.yaml
mlruns/911160861458921666/: meta.yaml
mlruns/911160861458921666/3f977f9ccd034d44aa50d45dafece564/: meta.yaml
mlruns/911160861458921666/4fbd12dfbcdc469cb25bb06748a8346b/: meta.yaml
mlruns/911160861458921666/593b1105a892413b841eea6f06682b7f/: meta.yaml
mlruns/911160861458921666/7656dea3b13c4d0aaf324f1532454a22/: meta.yaml
mlruns/911160861458921666/ab256c8a17c243138a3c84534b8bcc0d/: meta.yaml
mlruns/911160861458921666/d757bed1bd5245f7ae2cc21386b60ba2/: meta.yaml
mlruns/911160861458921666/ea5250ab7716472390e3034a91059896/: meta.yaml
models/: README.md  cox_ph.joblib_20251023_153741  coxnet.joblib_20251023_170335  gbsa.joblib_20251023_170439  weibull_aft.joblib_20251023_170434
scripts/: README.md  analyze_context.py  format-code.sh  md_to_docx.py  pre_commit_context_check.py  run-checks.sh  run-integration-tests.sh  setup-pre-commit.sh  sync-methodology.sh  update_changelog.py
src/: PRODUCTION_DATA_FIXES.md  PYSPARK_INTEGRATION_PLAN.md  README.md  main.py
src/configs/: production.json  sample.json
src/survival_framework/: README.md  __init__.py  config.py  data.py  logging_config.py  metrics.py  models.py  predict.py  recovery.py  strata_analysis.py  timing.py  tracking.py  train.py  utils.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_data.py  test_integration.py  test_metrics.py  test_strata_analysis.py  test_utils.py
(+37 files in other folders)
