# pyproject.toml - Project configuration

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survival-framework"
version = "1.0.0"
description = "Survival analysis framework for customer churn modeling"
readme = "readme.md"
requires-python = ">=3.11"
authors = [
    {name = "Wemetrix", email = "info@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "scikit-survival>=0.22",
    "lifelines>=0.27",
    "mlflow>=2.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pylint>=2.17.5",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "pandas-stubs>=2.0.3.230814",
    "types-setuptools>=68.1.0.0",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | src/mlruns
  | src/artifacts
  | src/models
  | data/test_outputs
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
skip_glob = [
    "**/mlruns/**",
    "**/artifacts/**",
    "**/models/**",
    "**/.venv/**",
    "**/venv/**",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src/survival_framework",
    "--cov-report=term-missing",
    "--cov-report=html:data/test_outputs/coverage",
    "--cov-report=xml:data/test_outputs/coverage.xml",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests across modules",
    "slow: Tests that take significant time to run",
    "requires_data: Tests that require sample data file",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/survival_framework"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/mlruns/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "sksurv.*",
    "lifelines.*",
    "mlflow.*",
    "seaborn.*",
]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.main]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-locals = 20

# Bandit configuration (security checks)
[tool.bandit]
exclude_dirs = [
    "/tests/",
    "/.venv/",
    "/venv/",
    "/src/mlruns/",
]
skips = ["B101", "B601"]

# Interrogate configuration (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
fail-under = 80
exclude = [
    "setup.py",
    "docs",
    "build",
    "tests",
]
verbose = 1
quiet = false
color = true
